--- a/index.html
+++ b/index.html
@@ -13,22 +13,34 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="home">
       <div class="container">
         <nav class="navbar">
           <a href="index.html" class="logo">Digital</a>
-          <ul class="navbar-menu">
-            <li class="nav-item"><a href="" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="" class="nav-link">Work</a></li>
-            <li class="nav-item"><a href="" class="nav-link">Process</a></li>
-            <li class="nav-item"><a href="" class="nav-link">Services</a></li>
+          <button class="btn menu-toggle" id="menu-toggle">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+          <ul class="navbar-menu" id="navbar-menu">
+            <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
             <li class="nav-item">
-              <a href="" class="nav-link">Testimonials</a>
+              <a href="#aboutus" class="nav-link">About</a>
             </li>
-            <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="#work" class="nav-link">Work</a></li>
+            <li class="nav-item">
+              <a href="#process" class="nav-link">Process</a>
+            </li>
+            <li class="nav-item">
+              <a href="#services" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#testimonials" class="nav-link">Testimonials</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
           </ul>
         </nav>
         <div class="hero">
@@ -45,7 +57,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="section section-about" id="about-us">
+      <section class="section section-about" id="aboutus">
         <div class="container">
           <article class="about-us">
             <h2 class="section-heading">About Us</h2>
